--- a/node-red-data2/package.json
+++ b/node-red-data2/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "node-red-contrib-advanced-logger": "~1.0.15"
+        "node-red-contrib-advanced-logger": "~1.0.15",
+        "node-red-contrib-appwrite": "~0.0.10"
     }
 }
